# insAIder

Backend/: api.py  crew.py  job_manager.py  pyproject.toml
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/components/: SideBarData.jsx
Frontend/src/components/input/: Input.css  Input.jsx
Frontend/src/components/navbar/: NavBar.css  NavBar.jsx
Frontend/src/components/output/: Output.jsx  output.css
Frontend/src/context/: UiContext.jsx
Frontend/src/pages/: Home.jsx  home.css
