[tool.poetry]
name = "advAIsor"
version = "0.1.0"
description = "Real time AI powered recommendations and analytics tool "
authors = ["bhancock_ai <brandon@brandonhancock.io>", "João Moura <joaomdmoura@mgail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.13"
crewai = {extras = ["tools"], version = "^0.86.0"}
crewai-tools = "^0.17.0"
pydantic = "^2.6.3"
load-dotenv = "^0.1.0"
flask = "^3.1.0"
flask-cors = "^5.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"